--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="telephone=no" name="format-detection"/>
     <!-- 引入自适应类库，不建议在main.js里引入 -->
-    <title>ticket-client</title>
+    <title>202博客</title>
   </head>
   <body>
     <div id="app"></div>
