添加了vuex 的组件测试

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="telephone=no" name="format-detection"/>
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
     <!-- 引入自适应类库，不建议在main.js里引入 -->
     <title>202博客</title>
   </head>
